# public-note

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Alex Wendland.md  CLAUDE.md  DEV_README.md  Declarative Language.md  Euler's totient function.md  Git Index.md  Hello.md  Key.md  Knapsack Problem.md  Markdown.md  Markup Language.md  Maths Index.md  Maths.md  Online Masters of Science Computer Science, Georgia Tech (OMSCS).md  Online Masters of Science in Computer Science, Georgia Tech (OMSCS).md  PPAD time.md  Programming Index.md  Programming.md  Psychology.md  Python Index.md  README.md  Test.md  Untitled 1.md  Untitled.md  Welcome.md  Wendland Weekly Index.md  conflict-files-obsidian-git.md  devenv.nix  devenv.yaml  hugo.yaml  index.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js  welcome.md
.obsidian/: app.json  community-plugins.json  types.json  workspace.json
.trash/: Drawing 2025-03-08 12.07.03.excalidraw 1.md  Hypervisor.md  Inter-process communication.md  Life graph with gradients.excalidraw.md  PPAD time.md  Untitled.md  Virtual page number 2.md  Virtual page number.md
Excalidraw/: 2d_feasible_region.md  5_9_a.md  5_9_f.md  5_9_g.md  Drawing 2023-10-03 06.45.36.excalidraw.md  Drawing 2023-10-17 07.20.49.excalidraw.md  Drawing 2024-02-10 12.42.01.excalidraw.md  Drawing 2025-02-09 14.20.14.excalidraw.md  Drawing 2025-03-08 12.07.03.excalidraw.md  Drawing 2025-06-29 10.35.07.excalidraw.md  Getting the right fit.md  Life graph basic.excalidraw.md  Life graph contors.excalidraw.md  Life graph.excalidraw.md  Page tables multi.excalidraw.md  Page tables.excalidraw.md  SVM example.md  boolean decision trees.excalidraw.md  decision tree example.excalidraw.md  ex_3_1.md  ex_3_1_dfs.md  ex_3_2_a.md  ex_3_2_a_dfs.md  ex_3_2_b.md  ex_3_2_b_dfs.md  ex_3_3.md  (+29 more)
scripts/: README.md  admin.py  definition.py  devenv.nix  example_with_metadata.md  example_with_no_metadata.md  lecture.py  needs_review.py  pyproject.toml  read_md.py  remove_title_headings.py  scratch_pad.py  undraft.py  update_last_edited.py
scripts/obsidian_helper/: constants.py  daily.py  file_admin.py  index_admin.py  link_handling.py  llm_checks.py  models.py  openai_note_check.py  read_obsidian.py  update_last_edited.py  write_obsidian.py
scripts/tests/: test_link_handling.py
(+4586 files in other folders)
